@@ -1,6 +1,7 @@
 2009-09-29 Ian Rutt
  * glide_temp.F90: cleaned derived types from finddisp
  * glide_temp.F90: cleaned derived types from hadvall and hadvpnt
+ * glide_temp.F90: reorganised iterative solution to avoid duplicated code
  * Regtested against branchpoint for e2.a - OK.
 
 2009-09-24 Ian Rutt
